--- a/shlibs/mount/src/mount.h.in
+++ b/shlibs/mount/src/mount.h.in
@@ -150,6 +150,8 @@ extern int mnt_optstr_next_option(char **optstr, char **name, size_t *namesz,
 				char **value, size_t *valuesz);
 extern int mnt_optstr_append_option(char **optstr, const char *name,
 				const char *value);
+extern int mnt_optstr_prepend_option(char **optstr, const char *name,
+				const char *value);
 extern int mnt_optstr_get_option(char *optstr, const char *name,
 				char **value, size_t *valsz);
 extern int mnt_optstr_set_option(char **optstr, const char *name,
