libmount: cleanup mount.h
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/mount/src/mount.h.in
+++ b/shlibs/mount/src/mount.h.in
@@ -309,44 +309,39 @@ enum {
 	MNT_OPTSMODE_MTABFORCE,		/* for MS_REMOUNT use always options from mountinfo/mtab */
 };
 
-mnt_context *mnt_new_context(void);
-void mnt_free_context(mnt_context *cxt);
-int mnt_reset_context(mnt_context *cxt);
-int mnt_context_is_restricted(mnt_context *cxt);
-int mnt_context_set_optsmode(mnt_context *cxt, int mode);
-int mnt_context_disable_canonicalize(mnt_context *cxt, int disable);
-int mnt_context_enable_lazy(mnt_context *cxt, int enable);
-int mnt_context_disable_helpers(mnt_context *cxt, int disable);
-int mnt_context_enable_sloppy(mnt_context *cxt, int enable);
-int mnt_context_enable_fake(mnt_context *cxt, int enable);
-int mnt_context_disable_mtab(mnt_context *cxt, int disable);
-int mnt_context_disable_lock(mnt_context *cxt, int disable);
-int mnt_context_enable_force(mnt_context *cxt, int enable);
-int mnt_context_enable_verbose(mnt_context *cxt, int enable);
-int mnt_context_enable_loopdel(mnt_context *cxt, int enable);
-int mnt_context_set_fs(mnt_context *cxt, mnt_fs *fs);
-int mnt_context_set_source(mnt_context *cxt, const char *source);
-int mnt_context_set_target(mnt_context *cxt, const char *target);
-int mnt_context_set_fstype(mnt_context *cxt, const char *fstype);
-int mnt_context_set_optstr(mnt_context *cxt, const char *optstr);
-int mnt_context_append_optstr(mnt_context *cxt, const char *optstr);
-int mnt_context_set_fstype_pattern(mnt_context *cxt, const char *pattern);
-int mnt_context_set_optstr_pattern(mnt_context *cxt, const char *pattern);
-int mnt_context_set_fstab(mnt_context *cxt, mnt_tab *tb);
-int mnt_context_set_cache(mnt_context *cxt, mnt_cache *cache);
-mnt_cache *mnt_context_get_cache(mnt_context *cxt);
-mnt_lock *mnt_context_get_lock(mnt_context *cxt);
-int mnt_context_set_mountflags(mnt_context *cxt, unsigned long flags);
-int mnt_context_get_mountflags(mnt_context *cxt, unsigned long *flags);
-int mnt_context_set_userspace_mountflags(mnt_context *cxt, unsigned long flags);
-int mnt_context_get_userspace_mountflags(mnt_context *cxt, unsigned long *flags);
-int mnt_context_set_mountdata(mnt_context *cxt, void *data);
-
-
-
-
-
-
+extern mnt_context *mnt_new_context(void);
+extern void mnt_free_context(mnt_context *cxt);
+extern int mnt_reset_context(mnt_context *cxt);
+extern int mnt_context_is_restricted(mnt_context *cxt);
+extern int mnt_context_set_optsmode(mnt_context *cxt, int mode);
+extern int mnt_context_disable_canonicalize(mnt_context *cxt, int disable);
+extern int mnt_context_enable_lazy(mnt_context *cxt, int enable);
+extern int mnt_context_disable_helpers(mnt_context *cxt, int disable);
+extern int mnt_context_enable_sloppy(mnt_context *cxt, int enable);
+extern int mnt_context_enable_fake(mnt_context *cxt, int enable);
+extern int mnt_context_disable_mtab(mnt_context *cxt, int disable);
+extern int mnt_context_disable_lock(mnt_context *cxt, int disable);
+extern int mnt_context_enable_force(mnt_context *cxt, int enable);
+extern int mnt_context_enable_verbose(mnt_context *cxt, int enable);
+extern int mnt_context_enable_loopdel(mnt_context *cxt, int enable);
+extern int mnt_context_set_fs(mnt_context *cxt, mnt_fs *fs);
+extern int mnt_context_set_source(mnt_context *cxt, const char *source);
+extern int mnt_context_set_target(mnt_context *cxt, const char *target);
+extern int mnt_context_set_fstype(mnt_context *cxt, const char *fstype);
+extern int mnt_context_set_optstr(mnt_context *cxt, const char *optstr);
+extern int mnt_context_append_optstr(mnt_context *cxt, const char *optstr);
+extern int mnt_context_set_fstype_pattern(mnt_context *cxt, const char *pattern);
+extern int mnt_context_set_optstr_pattern(mnt_context *cxt, const char *pattern);
+extern int mnt_context_set_fstab(mnt_context *cxt, mnt_tab *tb);
+extern int mnt_context_set_cache(mnt_context *cxt, mnt_cache *cache);
+extern mnt_cache *mnt_context_get_cache(mnt_context *cxt);
+extern mnt_lock *mnt_context_get_lock(mnt_context *cxt);
+extern int mnt_context_set_mountflags(mnt_context *cxt, unsigned long flags);
+extern int mnt_context_get_mountflags(mnt_context *cxt, unsigned long *flags);
+extern int mnt_context_set_userspace_mountflags(mnt_context *cxt, unsigned long flags);
+extern int mnt_context_get_userspace_mountflags(mnt_context *cxt, unsigned long *flags);
+extern int mnt_context_set_mountdata(mnt_context *cxt, void *data);
+extern int mnt_context_apply_fstab(mnt_context *cxt);
 
 /*
  * mount(8) userspace options masks (MNT_MAP_USERSPACE map)
