libmount: add umount(2) support
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/mount/src/mount.h.in
+++ b/shlibs/mount/src/mount.h.in
@@ -326,6 +326,7 @@ extern int mnt_context_disable_lock(mnt_context *cxt, int disable);
 extern int mnt_context_enable_force(mnt_context *cxt, int enable);
 extern int mnt_context_enable_verbose(mnt_context *cxt, int enable);
 extern int mnt_context_enable_loopdel(mnt_context *cxt, int enable);
+extern int mnt_context_enable_rdonly_umount(mnt_context *cxt, int enable);
 extern int mnt_context_set_fs(mnt_context *cxt, mnt_fs *fs);
 extern int mnt_context_set_source(mnt_context *cxt, const char *source);
 extern int mnt_context_set_target(mnt_context *cxt, const char *target);
@@ -335,6 +336,8 @@ extern int mnt_context_append_optstr(mnt_context *cxt, const char *optstr);
 extern int mnt_context_set_fstype_pattern(mnt_context *cxt, const char *pattern);
 extern int mnt_context_set_optstr_pattern(mnt_context *cxt, const char *pattern);
 extern int mnt_context_set_fstab(mnt_context *cxt, mnt_tab *tb);
+extern int mnt_context_get_fstab(mnt_context *cxt, mnt_tab **tb);
+extern int mnt_context_get_mtab(mnt_context *cxt, mnt_tab **tb);
 extern int mnt_context_set_cache(mnt_context *cxt, mnt_cache *cache);
 extern mnt_cache *mnt_context_get_cache(mnt_context *cxt);
 extern mnt_lock *mnt_context_get_lock(mnt_context *cxt);
