--- a/tests/commands.sh.in
+++ b/tests/commands.sh.in
@@ -1,54 +1,56 @@
-TOPDIR="$TS_TOPDIR/.."
+
+top_builddir=@top_builddir@
+top_srcdir=@top_srcdir@
 
 # Misc settings
 TS_TESTUSER=${TS_TESTUSER:-"test"}
 
 # helpers
-TS_HELPER_SYSINFO="$TS_TOPDIR/helpers/test_sysinfo"
-TS_HELPER_PATHS="$TS_TOPDIR/helpers/test_pathnames"
-TS_HELPER_BYTESWAP="$TS_TOPDIR/helpers/test_byteswap"
-TS_HELPER_MD5="$TS_TOPDIR/helpers/test_md5"
+TS_HELPER_SYSINFO="$top_builddir/tests/helpers/test_sysinfo"
+TS_HELPER_PATHS="$top_builddir/tests/helpers/test_pathnames"
+TS_HELPER_BYTESWAP="$top_builddir/tests/helpers/test_byteswap"
+TS_HELPER_MD5="$top_builddir/tests/helpers/test_md5"
 
-TS_HELPER_ISMOUNTED="$TOPDIR/lib/test_ismounted"
-TS_HELPER_STRTOSIZE="$TOPDIR/lib/test_strtosize"
-TS_HELPER_CPUSET="$TOPDIR/lib/test_cpuset"
+TS_HELPER_ISMOUNTED="$top_builddir/lib/test_ismounted"
+TS_HELPER_STRTOSIZE="$top_builddir/lib/test_strtosize"
+TS_HELPER_CPUSET="$top_builddir/lib/test_cpuset"
 
 # TODO: use partx
-TS_HELPER_PARTITIONS="$TOPDIR/shlibs/blkid/samples/partitions"
+TS_HELPER_PARTITIONS="$top_builddir/shlibs/blkid/samples/partitions"
 
-U_L_LIBRARY_PATH="$TOPDIR/shlibs/blkid/src/.libs:$TOPDIR/shlibs/uuid/src/.libs"
+U_L_LIBRARY_PATH="$top_builddir/shlibs/blkid/src/.libs:$top_builddir/shlibs/uuid/src/.libs"
 
 # paths to commands
-TS_CMD_MOUNT=${TS_CMD_MOUNT:-"$TOPDIR/mount/mount"}
-TS_CMD_UMOUNT=${TS_CMD_UMOUNT:-"$TOPDIR/mount/umount"}
-TS_CMD_SWAPON=${TS_CMD_SWAPON:-"$TOPDIR/mount/.libs/swapon"}
-TS_CMD_SWAPOFF=${TS_CMD_SWAPOFF:-"$TOPDIR/mount/.libs/swapoff"}
-TS_CMD_LOSETUP=${TS_CMD_LOSETUP:-"$TOPDIR/mount/losetup"}
+TS_CMD_MOUNT=${TS_CMD_MOUNT:-"$top_builddir/mount/mount"}
+TS_CMD_UMOUNT=${TS_CMD_UMOUNT:-"$top_builddir/mount/umount"}
+TS_CMD_SWAPON=${TS_CMD_SWAPON:-"$top_builddir/mount/.libs/swapon"}
+TS_CMD_SWAPOFF=${TS_CMD_SWAPOFF:-"$top_builddir/mount/.libs/swapoff"}
+TS_CMD_LOSETUP=${TS_CMD_LOSETUP:-"$top_builddir/mount/losetup"}
 
-TS_CMD_MTABLOCK=${TS_CMD_MTABLOCK:-"$TOPDIR/mount/mtab_lock_test"}
+TS_CMD_MTABLOCK=${TS_CMD_MTABLOCK:-"$top_builddir/mount/mtab_lock_test"}
 
-TS_CMD_MKSWAP=${TS_CMD_MKSWAP:-"$TOPDIR/disk-utils/mkswap"}
-TS_CMD_MKCRAMFS=${TS_CMD_MKCRAMFS:-"$TOPDIR/disk-utils/mkfs.cramfs"}
-TS_CMD_MKMINIX=${TS_CMD_MKMINIX:-"$TOPDIR/disk-utils/mkfs.minix"}
-TS_CMD_FSCKCRAMFS=${TS_CMD_FSCKCRAMFS:-"$TOPDIR/disk-utils/fsck.cramfs"}
-TS_CMD_FSCKMINIX=${TS_CMD_FSCKMINIX:-"$TOPDIR/disk-utils/fsck.minix"}
+TS_CMD_MKSWAP=${TS_CMD_MKSWAP:-"$top_builddir/disk-utils/mkswap"}
+TS_CMD_MKCRAMFS=${TS_CMD_MKCRAMFS:-"$top_builddir/disk-utils/mkfs.cramfs"}
+TS_CMD_MKMINIX=${TS_CMD_MKMINIX:-"$top_builddir/disk-utils/mkfs.minix"}
+TS_CMD_FSCKCRAMFS=${TS_CMD_FSCKCRAMFS:-"$top_builddir/disk-utils/fsck.cramfs"}
+TS_CMD_FSCKMINIX=${TS_CMD_FSCKMINIX:-"$top_builddir/disk-utils/fsck.minix"}
 
-TS_CMD_IPCS=${TS_CMD_IPCS:-"$TOPDIR/sys-utils/ipcs"}
+TS_CMD_IPCS=${TS_CMD_IPCS:-"$top_builddir/sys-utils/ipcs"}
 
-TS_CMD_COL=${TS_CMD_COL:-"$TOPDIR/text-utils/col"}
+TS_CMD_COL=${TS_CMD_COL:-"$top_builddir/text-utils/col"}
 
-TS_CMD_NAMEI=${TS_CMD_NAMEI-"$TOPDIR/misc-utils/namei"}
-TS_CMD_LOOK=${TS_CMD_LOOK-"$TOPDIR/misc-utils/look"}
-TS_CMD_CAL=${TS_CMD_CAL-"$TOPDIR/misc-utils/cal"}
-TS_CMD_SCRIPT=${TS_CMD_SCRIPT-"$TOPDIR/misc-utils/script"}
+TS_CMD_NAMEI=${TS_CMD_NAMEI-"$top_builddir/misc-utils/namei"}
+TS_CMD_LOOK=${TS_CMD_LOOK-"$top_builddir/misc-utils/look"}
+TS_CMD_CAL=${TS_CMD_CAL-"$top_builddir/misc-utils/cal"}
+TS_CMD_SCRIPT=${TS_CMD_SCRIPT-"$top_builddir/misc-utils/script"}
 
-TS_CMD_CHECKTTY=${TS_CMD_CHECKTTY-"$TOPDIR/login-utils/checktty_test"}
-TS_CMD_ISLOCAL=${TS_CMD_ISLOCAL-"$TOPDIR/login-utils/islocal_test"}
+TS_CMD_CHECKTTY=${TS_CMD_CHECKTTY-"$top_builddir/login-utils/checktty_test"}
+TS_CMD_ISLOCAL=${TS_CMD_ISLOCAL-"$top_builddir/login-utils/islocal_test"}
 
-TS_CMD_HWCLOCK=${TS_CMD_HWCLOCK-"$TOPDIR/hwclock/hwclock"}
-TS_CMD_LSCPU=${TS_CMD_LSCPU-"$TOPDIR/sys-utils/lscpu"}
+TS_CMD_HWCLOCK=${TS_CMD_HWCLOCK-"$top_builddir/hwclock/hwclock"}
+TS_CMD_LSCPU=${TS_CMD_LSCPU-"$top_builddir/sys-utils/lscpu"}
 
-TS_CMD_BLKID=${TS_CMD_BLKID-"$TOPDIR/misc-utils/blkid"}
-TS_CMD_PARTX=${TS_CMD_PARTX-"$TOPDIR/partx/partx"}
+TS_CMD_BLKID=${TS_CMD_BLKID-"$top_builddir/misc-utils/blkid"}
+TS_CMD_PARTX=${TS_CMD_PARTX-"$top_builddir/partx/partx"}
+TS_CMD_FDISK=${TS_CMD_FDISK-"$top_builddir/fdisk/fdisk"}
 
-TS_CMD_FDISK=${TS_CMD_FDISK-"$TOPDIR/fdisk/fdisk"}
