--- a/tests/commands.sh.in
+++ b/tests/commands.sh.in
@@ -15,6 +15,8 @@ TS_HELPER_ISMOUNTED="$top_builddir/lib/test_ismounted"
 TS_HELPER_STRTOSIZE="$top_builddir/lib/test_strtosize"
 TS_HELPER_CPUSET="$top_builddir/lib/test_cpuset"
 
+TS_HELPER_OPTSTR="$top_builddir/shlibs/mount/src/test_optstr"
+
 # TODO: use partx
 TS_HELPER_PARTITIONS="$top_builddir/shlibs/blkid/samples/partitions"
 
