--- a/shlibs/mount/src/mount.h.in
+++ b/shlibs/mount/src/mount.h.in
@@ -254,7 +254,7 @@ extern int mnt_tab_parse_file(mnt_tab *tb, const char *filename);
 extern int mnt_tab_parse_fstab(mnt_tab *tb);
 extern int mnt_tab_parse_mtab(mnt_tab *tb);
 extern int mnt_tab_set_parser_errcb(mnt_tab *tb,
-                int (*cb)(mnt_tab *tb, const char *filename, int line, int flag));
+                int (*cb)(mnt_tab *tb, const char *filename, int line));
 
 /* tab.c */
 extern mnt_tab *mnt_new_tab(void);
