--- a/tests/commands.sh.in
+++ b/tests/commands.sh.in
@@ -16,8 +16,9 @@ TS_HELPER_STRTOSIZE="$top_builddir/lib/test_strtosize"
 TS_HELPER_CPUSET="$top_builddir/lib/test_cpuset"
 
 # libmount
-TS_HELPER_OPTSTR="$top_builddir/shlibs/mount/src/test_optstr"
-TS_HELPER_TABFILES="$top_builddir/shlibs/mount/src/test_tab"
+TS_HELPER_LIBMOUNT_OPTSTR="$top_builddir/shlibs/mount/src/test_optstr"
+TS_HELPER_LIBMOUNT_TAB="$top_builddir/shlibs/mount/src/test_tab"
+TS_HELPER_LIBMOUNT_UTILS="$top_builddir/shlibs/mount/src/test_utils"
 
 # TODO: use partx
 TS_HELPER_PARTITIONS="$top_builddir/shlibs/blkid/samples/partitions"
