--- a/misc-utils/Makefile.am
+++ b/misc-utils/Makefile.am
@@ -60,6 +60,9 @@ dist_man_MANS += findmnt.8
 findmnt_LDADD = $(ul_libmount_la)
 findmnt_CFLAGS = $(AM_CFLAGS) -I$(ul_libmount_incdir)
 findmnt_SOURCES = findmnt.c $(top_srcdir)/lib/tt.c
+if !HAVE_LANGINFO
+findmnt_SOURCES += $(top_srcdir)/lib/langinfo.c
+endif
 endif
 
 cal_SOURCES = cal.c $(top_srcdir)/lib/mbsalign.c
