lib: [strutils] general purpose string handling functions
This patch replaces a few functions used throughout the source:
* Renames getnum (from schedutils) to strtol_or_err
* Moves strtosize (from lib/strtosize.c)
* Moves xstrncpy (from include/xstrncpy.h)
* Adds strnlen, strnchr and strndup if not available (remove it from libmount utils)

A few Makefile.am files were modified to compile accordingly along with trivial renaming
in schedutils source code.

Signed-off-by: Davidlohr Bueso <dave@gnu.org>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -20,11 +20,10 @@ dist_noinst_HEADERS = \
 	nls.h \
 	pathnames.h \
 	setproctitle.h \
-	strtosize.h \
+	strutils.h \
 	swapheader.h \
 	tt.h \
 	usleep.h \
 	wholedisk.h \
 	widechar.h \
-	writeall.h \
-	xstrncpy.h
+	writeall.h
