--- a/sys-utils/Makefile.am
+++ b/sys-utils/Makefile.am
@@ -31,7 +31,7 @@ tunelp_SOURCES = tunelp.c lp.h
 
 if BUILD_FALLOCATE
 usrbin_exec_PROGRAMS += fallocate
-fallocate_SOURCES = fallocate.c $(top_srcdir)/lib/strtosize.c
+fallocate_SOURCES = fallocate.c $(top_srcdir)/lib/strutils.c
 dist_man_MANS += fallocate.1
 endif
 
