--- a/misc-utils/Makefile.am
+++ b/misc-utils/Makefile.am
@@ -6,16 +6,11 @@ bin_PROGRAMS =
 sbin_PROGRAMS =
 usrsbin_exec_PROGRAMS =
 
-usrbin_exec_PROGRAMS = cal ddate logger look lsblk mcookie \
+usrbin_exec_PROGRAMS = cal ddate logger look mcookie \
 	namei script whereis scriptreplay
 EXTRA_DIST += README.cal README.ddate README.namei README.namei2
 
 mcookie_SOURCES = mcookie.c $(top_srcdir)/lib/md5.c
-lsblk_SOURCES = lsblk.c \
-		$(top_srcdir)/lib/canonicalize.c \
-		$(top_srcdir)/lib/ismounted.c \
-		$(top_srcdir)/lib/tt.c \
-		$(top_srcdir)/lib/strutils.c
 script_LDADD =
 
 usrbin_exec_SCRIPTS = chkdupexe
@@ -23,7 +18,7 @@ usrbin_exec_SCRIPTS = chkdupexe
 CLEANFILES = chkdupexe
 
 dist_man_MANS = cal.1 chkdupexe.1 ddate.1 logger.1 look.1 mcookie.1 \
-	lsblk.1 namei.1 script.1 whereis.1 scriptreplay.1
+		namei.1 script.1 whereis.1 scriptreplay.1
 
 namei_SOURCES = namei.c $(top_srcdir)/lib/strutils.c
 
@@ -47,11 +42,21 @@ blkid_SOURCES = blkid.c $(top_srcdir)/lib/ismounted.c \
 		$(top_srcdir)/lib/strutils.c
 blkid_LDADD = $(ul_libblkid_la)
 blkid_CFLAGS = $(AM_CFLAGS) -I$(ul_libblkid_incdir)
+
 findfs_LDADD = $(ul_libblkid_la)
 findfs_CFLAGS = $(AM_CFLAGS) -I$(ul_libblkid_incdir)
+
 wipefs_SOURCES = wipefs.c $(top_srcdir)/lib/strutils.c
 wipefs_LDADD = $(ul_libblkid_la)
 wipefs_CFLAGS = $(AM_CFLAGS) -I$(ul_libblkid_incdir)
+
+bin_PROGRAMS += lsblk
+dist_man_MANS += lsblk.8
+lsblk_SOURCES = lsblk.c \
+		$(top_srcdir)/lib/canonicalize.c \
+		$(top_srcdir)/lib/ismounted.c \
+		$(top_srcdir)/lib/tt.c \
+		$(top_srcdir)/lib/strutils.c
 lsblk_LDADD = $(ul_libblkid_la)
 lsblk_CFLAGS = $(AM_CFLAGS) -I$(ul_libblkid_incdir)
 if HAVE_STATIC_BLKID
