--- a/sys-utils/Makefile.am
+++ b/sys-utils/Makefile.am
@@ -10,12 +10,12 @@ dist_man_MANS = flock.1 ipcrm.1 ipcs.1 ipcmk.1 renice.1 setsid.1 \
 
 if LINUX
 bin_PROGRAMS += dmesg
-sbin_PROGRAMS += ctrlaltdel fsfreeze
+sbin_PROGRAMS += ctrlaltdel fsfreeze fstrim
 usrbin_exec_PROGRAMS += cytune setarch
 usrsbin_exec_PROGRAMS += ldattach tunelp rtcwake
 
 dist_man_MANS += dmesg.1 ctrlaltdel.8 cytune.8 setarch.8 \
-		ldattach.8 tunelp.8 rtcwake.8 fsfreeze.8
+		ldattach.8 tunelp.8 rtcwake.8 fsfreeze.8 fstrim.8
 
 if HAVE_CPU_SET_T
 usrbin_exec_PROGRAMS += lscpu
@@ -27,7 +27,7 @@ endif
 
 cytune_SOURCES = cytune.c cyclades.h
 tunelp_SOURCES = tunelp.c lp.h
-
+fstrim_SOURCES = fstrim.c $(top_srcdir)/lib/strutils.c
 
 if BUILD_FALLOCATE
 usrbin_exec_PROGRAMS += fallocate
