--- a/sys-utils/Makefile.am
+++ b/sys-utils/Makefile.am
@@ -28,6 +28,7 @@ endif
 cytune_SOURCES = cytune.c cyclades.h
 tunelp_SOURCES = tunelp.c lp.h
 fstrim_SOURCES = fstrim.c $(top_srcdir)/lib/strutils.c
+rtcwake_SOURCES = rtcwake.c $(top_srcdir)/lib/strutils.c
 
 if BUILD_FALLOCATE
 usrbin_exec_PROGRAMS += fallocate
