simpleinit: move old init stuff to separate directory
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -1144,6 +1144,7 @@ fsck/Makefile
 getopt/Makefile
 hwclock/Makefile
 include/Makefile
+simpleinit/Makefile
 lib/Makefile
 login-utils/Makefile
 Makefile
