libmount: minor fixes
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/mount/src/Makefile.am
+++ b/shlibs/mount/src/Makefile.am
@@ -55,7 +55,7 @@ uninstall-hook:
 
 
 tests = test_version test_cache test_optstr test_lock \
-		  test_tab test_utils test_tab_update
+		  test_tab test_utils test_tab_update test_context
 
 tests: all $(tests)
 test_%: %.c all
