--- a/shlibs/mount/src/mount.h.in
+++ b/shlibs/mount/src/mount.h.in
@@ -31,6 +31,7 @@ extern "C" {
 
 #include <stdio.h>
 #include <mntent.h>
+#include <sys/types.h>
 
 #define LIBMOUNT_VERSION   "@LIBMOUNT_VERSION@"
 
